--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>MusiCLI</title>
 </head>
 <body>
-    Thank you!
+    <div class="message">
+        Authorization successful. You can now close this window and return to the command line.
+    </div>
 </body>
 </html>
